<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/container_view">

    <TableRow style="@style/table_row_centered">
        <TextView
            android:text="@string/spinner_groupe_label"
            style="@style/spinner_label"/>
        <Spinner
            android:id="@+id/itineraire_groupe_liste"
            style="@style/spinner"
            />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/itineraire_inversion"
            style="@style/button"
            android:text="@string/itineraire_btn_inversion"
            />
    </TableRow>
    <TableRow style="@style/table_row_centered">
        <AutoCompleteTextView
            android:id="@+id/itineraire_arret_depart"
            style="@style/edittext"
            android:hint="@string/itineraire_arret_depart_hint"
            android:maxLength="30"
            android:maxLines="1"
            />
        <AutoCompleteTextView
            android:id="@+id/itineraire_arret_arrive"
            style="@style/edittext"
            android:maxLength="30"
            android:maxLines="1"
            android:hint="@string/itineraire_arret_arrive_hint"
            />
    </TableRow>
    <TableRow style="@style/table_row_centered">
        <EditText
            android:id="@+id/itineraire_horaire_depart"
            android:inputType="none"
            android:focusable="false"
            style="@style/edittext"
            android:hint="@string/itineraire_horaire_depart_hint"
            />
        <EditText
            android:id="@+id/itineraire_horaire_arrive"
            style="@style/edittext"
            android:hint="@string/itineraire_horaire_arrive_hint"
            android:inputType="none"
            android:focusable="false"
            />
    </TableRow>
    <TableRow style="@style/table_row_centered">
        <TextView
            android:text="@string/spinner_periode_label"
            style="@style/spinner_label"
            />
        <Spinner
            android:id="@+id/spinner_periode"
            style="@style/spinner"
            />
    </TableRow>
    <TableRow style="@style/table_row_centered">
        <CheckBox
            android:id="@+id/autoriser_correspondances"
            android:text="@string/checkbox_correspondances_label"
            style="@style/checkbox"
            />
    </TableRow>
    <TableRow style="@style/table_row_centered">
        <Button
            android:id="@+id/bouton_rechercher"
            style="@style/button"
            android:text="@string/btn_rechercher"/>
    </TableRow>

</TableLayout>